--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "mercuryseries/flashy": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "require-dev": {
